# Stop_Watch_TC4M

./: Application.c  CMakeLists.txt  README.md
ECUAL/: Seven Segmen.h  Seven Segment.c
MCAL/: DIO.c  DIO.h  SysTick.c  Systick.h
